fixed 508 color contrast issues

--- a/assets/css/pages/_chapter1.scss
+++ b/assets/css/pages/_chapter1.scss
@@ -61,7 +61,7 @@
 .slide{
 	display: inline;
 	min-height: 20em;
-	background-color: $blue-light;
+	background-color: $blue-dark;
 	color: #fff;
 	padding: .5em;
 	p{
